feat: implement tests e2e with prisma-environment

--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_NAME="ddd-db"
+DATABASE_USERNAME="postgres"
+DATABASE_PASSWORD="ba0d65362e96"
+DATABASE_PORT="5432"
+
+# DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgres://postgres:ba0d65362e96@localhost:5432/ddd-db"
