--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts",
     "start:dev": "tsx watch src/main.ts",
-    "test": "vitest",
-    "test:watch": "vitest --watch",
-    "test:cov": "vitest --coverage",
-    "test:ui": "vitest --ui --coverage --watch",
+    "test": "vitest run -c vitest.unit.config.mts",
+    "test:watch": "vitest -c vitest.unit.config.mts --watch",
+    "test:cov": "vitest -c vitest.unit.config.mts --coverage",
+    "test:ui": "vitest -c vitest.unit.config.mts --ui --coverage --watch",
+    "test:e2e": "vitest run -c vitest.e2e.config.mts",
+    "test:e2e:watch": "vitest -c vitest.e2e.config.mts",
+    "test:create-prisma-environment": "npm link ./src/infra/libs/prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
+    "pretest:e2e": "npm run test:create-prisma-environment && npm run test:install-prisma-environment",
     "style:check": "npx @biomejs/biome check --write ./src",
     "types:check": "tsc --noEmit",
     "prisma:migration": "prisma migrate dev --schema=./src/infra/libs/prisma/schema.prisma "
@@ -29,5 +34,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0"
+  },
+  "prisma": {
+    "schema": "./src/infra/libs/prisma/schema.prisma"
   }
 }
