fix: :bug: config setup vitest environment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "allowImportingTsExtensions": true,
     /* Base Options: */
     "esModuleInterop": true,
     "skipLibCheck": true,
