--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@brunoss/mock-builder": "^1.0.11",
     "@faker-js/faker": "^8.4.1",
     "@types/node": "^22.4.1",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vitest/ui": "^2.0.5",
     "prisma": "^5.18.0",
     "tsup": "^8.2.4",
     "tsx": "^4.17.0",
