--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "vitest": "^2.0.5"
   },
   "dependencies": {
+    "@hono/node-server": "^1.13.1",
     "@prisma/client": "^5.18.0"
   },
   "prisma": {
